HTTP_Routing/2.28_HTTPRequestMirror_Percent/gw-http-route_iRule.yaml
# 2.28 iRule 우회. native RequestMirror percent/fraction 미적용.
# /percent /fraction 모두 50%. rand() < 0.5 이면 HSL 로 tea-pool.
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: http-gw
  namespace: web
spec:
  gatewayClassName: f5-bnk-gateway-class
  addresses:
    - type: IPAddress
      value: 40.30.20.20
  listeners:
    - name: bnk-listener
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: HTTPRoute
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: request-mirror-percent-irule-route
  namespace: web
spec:
  parentRefs:
    - name: http-gw
      sectionName: bnk-listener
  hostnames:
    - coffee.f5bnk.com
  rules:
    - backendRefs:
        - name: coffee-pool
          kind: Pool
          group: k8s.f5net.com
